[metadata]
name = rla_export
author = Neal McBurnett
author-email = nealmcb@freeandfair.us
summary = Export data for publication and audit verification from ColoradoRLA: Software to facilitate risk-limiting post-election tabulation audits
description-file = README.rst
home-page = https://github.com/FreeAndFair/ColoradoRLA
license = GPLv3+
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 2.7
    Programming Language :: SQL
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    Topic :: Other/Nonlisted Topic
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Security
# Need more "Intended Audience" options, like:
#  Government
#  Election Administrators
# Need more "Topic" options, like:
#  Politics
#  Government
#  Auditing
#  Elections
keywords = audit election psycopg2
[files]
packages =
    rla_export
data_files =
# README.rst? .html?  or get via sphinx??
[entry_points]
console_scripts =
    rla_export = rla_export.__main__:main

[pbr]
autodoc_tree_index_modules = 1
autodoc_index_modules = 1
